@@ -21,6 +21,9 @@ Package org.springframework.webflow.conversation
 * Each SessionBindingConversationManager now uses a unique key to store it's conversation container
   in the session (SWF-304).
 
+Package org.springframework.webflow.engine
+* Added invoke(String, Action) method to AbstractFlowBuilder.
+
 Package org.springframework.webflow.execution
 * Added a holder for the FlowExecutionContext of a request (SWF-163).
 
